<resources>
    <string name="app_name">ProjetLokaCar</string>
    <string name="Lokacar">Lokacar</string>
    <string name="rent_car">Louer une voiture</string>
    <string name="return_car">Retour d\'une voiture</string>
    <string name="client_gestion">Gestion des clients</string>
    <string name="current_rents">Locations</string>
    <string name="parking">Parc automobile</string>
    <string name="stats">Stats App</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Separator">--</string>
    <string name="type_de_carburant">Type de carburant :</string>
    <string name="number_of_seats">Nombre de places :</string>
    <string name="n_d_immatriculation">N° d\'immatriculation :</string>
    <string name="prix_par_jour">Prix par jour</string>
    <string name="louez_moi">Louez moi !</string>
    <string name="retour_de_la_voiture">Retour de la voiture</string>
    <string name="separator">--</string>
    <string name="lastName">Nom :</string>
    <string name="firstName">Prénom :</string>
    <string name="address">Adresse :</string>
    <string name="email">Email :</string>
    <string name="phoneNumber">Téléphone :</string>
    <string name="add_client">Ajouter un Client</string>
    <string name="cancel">Annuler</string>
    <string name="createClient">Ajouter Client</string>
    <string name="new_client">Nouveau Client :</string>
    <string name="nom_du_client">Nom du client pour la location :</string>
    <string name="recherche">recherche</string>
    <string name="louer_marque_marque">Louer : marque -- marque</string>
    <string name="v_hicule">Véhicule:</string>
    <string name="choisir_une_date">choisir une date de début de location</string>
    <string name="nombre_de_clients">Nombre de clients :</string>
    <string name="nombre_de_voitures_dans_le_parc">Nombre de voitures dans le parc :</string>
    <string name="nombre_de_voitures_lou_es">Nombre de voitures louées :</string>
    <string name="chiffre_d_affaire">Chiffre d\'affaire :</string>
    <string name="marque_recherch_e">marque recherchée</string>
    <string name="title_connection">Connexion LokaCar</string>
    <string name="title_home">LokaCar - Agence Michel</string>
    <string name="title_return_car_list">Véhicules en Location</string>
    <string name="title_rent_car">Louer un Véhicule</string>
    <string name="title_client_list">Liste des Clients</string>
    <string name="title_agency_mgmt">Gestion de l\'Agence Michel</string>
    <string name="title_current_rents">Locations en Cours</string>
    <string name="title_parking">Tous les Véhicules</string>
    <string name="title_car_detail">Détails du Véhicule</string>
    <string name="title_rent_cars">Véhicules à Louer</string>
    <string name="title_return_car">Retour d\'un Véhicule</string>
    <string name="title_client_detail">Détails du Client</string>
    <string name="title_client_add">Nouveau Client</string>
    <string name="type_de_voiture">Type de voiture :</string>
    <string name="add_car">Ajouter un Véhicule</string>
    <string name="title_car_add">Nouveau Véhicule</string>
    <string name="createCar">Ajouter Véhicule</string>
    <string name="car_type">Type :</string>
    <string name="car_brand">Marque :</string>
    <string name="car_model">Modèle :</string>
    <string name="car_fuel">Carburant :</string>
    <string name="car_seat_numb">Places :</string>
    <string name="car_plate">Plaque :</string>
    <string name="car_price">Prix Jounalier :</string>
    <string name="message">Message :</string>
    <string name="contenu_du_message">contenu du message</string>
    <string name="start_date">Début le :</string>
    <string name="end_date">Fin le :</string>
    <string name="take_picture">Prendre Photos avant la location</string>
    <string name="nb_loc_date">Jours de location :</string>
    <string name="validate_loc">Valider la Location</string>
    <string name="photos">Prendre photos</string>
</resources>
