<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical"
    tools:context=".Activities.CarDetailsActivity">

    <ImageView
        android:id="@+id/CarFullPicture"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/carBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Marque"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/carModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="Modele"
            android:textSize="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/type_de_carburant" />

            <TextView
                android:id="@+id/carFuel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/number_of_seats" />

            <TextView
                android:id="@+id/seatNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/n_d_immatriculation" />

            <TextView
                android:id="@+id/plateNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dailyPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/prix_par_jour"
                android:textColor="@android:color/white"
                android:textSize="30dp" />

        </LinearLayout>
    </LinearLayout>

    <ToggleButton
        android:id="@+id/swRent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBtn"
        android:onClick="rentOrUnrentCar"
        android:padding="5dp"
        android:textOff="@string/louez_moi"
        android:textOn="@string/retour_de_la_voiture" />
</LinearLayout>
