<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Activities.CarAddActivity">

    <LinearLayout
        android:id="@+id/llNCa_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="start"
            android:text="@string/car_plate"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edNCaPlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNCa_2"
        android:layout_below="@+id/llNCa_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="start"
            android:text="@string/car_brand"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edNCaBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNCa_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llNCa_2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="start"
            android:text="@string/car_model"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edNCaModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNCa_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llNCa_3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="start"
            android:text="@string/car_type"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spCarType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNCa_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llNCa_4"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="start"
            android:text="@string/car_fuel"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spCarFuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNCa_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llNCa_5"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="start"
            android:text="@string/car_seat_numb"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edNCaSeatsNb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNCa_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llNCa_6"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="start"
            android:text="@string/car_price"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edNCaPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNCa_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/lokacar_ic_cancel_24"
            android:onClick="emptyForm"
            android:text="@string/cancel" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/lokacar_ic_add_24"
            android:onClick="createCar"
            android:text="@string/createCar" />

    </LinearLayout>

</RelativeLayout>