<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.ClientAddActivity">



    <LinearLayout
        android:id="@+id/llNC_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="start"
            android:text="@string/lastName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edNCLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNC_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llNC_1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="start"
            android:text="@string/firstName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edNCFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNC_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llNC_2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="start"
            android:text="@string/address"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edNCAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:inputType="textPostalAddress"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNC_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llNC_3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="start"
            android:text="@string/email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edNCEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNC_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llNC_4"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:gravity="start"
            android:text="@string/phoneNumber"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edNCPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:inputType="phone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNC_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/lokacar_ic_cancel_24"
            android:onClick="emptyForm"
            android:text="@string/cancel" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/lokacar_ic_add_24"
            android:onClick="createClient"
            android:text="@string/createClient" />

    </LinearLayout>

</RelativeLayout>