<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ClientListActivity">

    <Button
        android:id="@+id/btnAddClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:background="@color/colorBtn"
        android:drawableStart="@drawable/lokacar_ic_add_client_24"
        android:drawablePadding="7dp"
        android:onClick="redirNewClient"
        android:padding="5dp"
        android:text="@string/add_client" />

    <LinearLayout
        android:id="@+id/linearSekkforClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAddClient"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/seekForClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:hint="@string/nom_du_client" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:background="@color/colorBtn"
                android:onClick="onClickSearchClient"
                android:padding="5dp"
                android:text="@string/recherche" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ClientList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearSekkforClient"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

</RelativeLayout>